--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ clap = { version = "4.4", features = ["derive"] }
 anyhow = "1.0"
 regex = "1.10"
 toml = "0.8"
+reqwest = { version = "0.11", features = ["json"] }
