Initial commit: Abitur Analyzer with comprehensive guide and cross-platform builds
- Added GitHub Copilot disclaimer to README
- Created comprehensive GUIDE.md consolidating all documentation
- Removed obsolete documentation files (MAGIC_THESES.md, CONFIG.md, etc.)
- Fixed program output to show detailed admission status like cutoff_analysis.txt
- Added cross-platform build support (Linux, Windows, macOS)
- Added build scripts (build.sh, build.bat) and Makefile
- Optimized Cargo.toml for release builds with LTO and static linking
- Updated .gitignore for build artifacts and common IDE files

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,23 @@
-/target
-/output
+# Abitur Analyzer
+
+/target/
+/builds/
+*.log
+.env
+config.toml
+/data-source/
+/output/
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Backup files
+*~
+*.bak
